Sorted functionality on faqs to include aria-expanded and modified animation on open close css icon

--- a/_factory_faqs.html
+++ b/_factory_faqs.html
@@ -82,7 +82,7 @@
                     <header class="col-12 text-center">
                         <h2>FAQs</h2>
                         <div class="pd-faqs-2-headline">
-                            <p><strong>Handy questions you might want to ask...</strong></p>
+                            <p><strong>Lorem eget turpis dapibus posuere nullam id malesuada nulla.</strong></p>
                         </div>
                         <div class="pd-faqs-2-subHeadline">
                             <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="pt-4 row">
                     <div class="col-md-6">
-                        <div class="pd-faqs-2-card-outer">
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
                             <header class="pd-faqs-2-card-header">
                                 <a class="pd-faqs-2-btn" href="#" name="anchor">Mauris efficitur, sem sit amet feugiat porta, lectus mauris tincidunt neque?</a>
                                 <div>
@@ -104,7 +104,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="pd-faqs-2-card-outer">
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
                             <header class="pd-faqs-2-card-header">
                                 <a class="pd-faqs-2-btn" href="#" name="anchor">Pellentesque posuere ullamcorper justo at aliquam?</a>
                                 <div>
@@ -116,10 +116,101 @@
                                     <p>Curabitur vel sollicitudin odio, sodales condimentum turpis. Mauris efficitur, sem sit amet feugiat porta, lectus mauris tincidunt neque, non feugiat nibh est eu nisi. Donec dui purus, viverra volutpat tortor eget, dapibus tempus nulla. Mauris lobortis ligula luctus ligula tincidunt, blandit tempor nulla laoreet. Ut volutpat lacinia mauris, aliquet fermentum mi rutrum a. Donec commodo turpis et sollicitudin pellentesque. Duis interdum eget tellus auctor fringilla. Fusce at ligula quam. Donec in congue erat. Ut tristique accumsan leo eget congue.</p>
                                 </div>
                             </div>
+                        </div>
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Integer fermentum nibh bibendum?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Proin dictum ligula id bibendum pulvinar. Sed suscipit risus finibus, finibus ipsum vitae, fermentum quam. Nam hendrerit vestibulum gravida. Etiam id lacus metus.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Curabitur egestas pretium leo et dapibus?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Praesent nec gravida quam, fringilla fringilla felis. Maecenas ultrices a lectus nec efficitur. Morbi in augue quis nulla gravida consectetur. Sed a lorem interdum lacus congue posuere eu in leo. In in mauris elementum quam condimentum hendrerit. Integer rutrum, est sit amet placerat sollicitudin.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Praesent nec gravida quam, fringilla fringilla felis?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Quisque at magna ex. Maecenas ac ipsum a sapien molestie blandit eu a justo. Morbi rhoncus eget leo sed lacinia. Proin in arcu eget libero pellentesque sagittis nec sed nibh. Nunc commodo justo a est cursus, at tincidunt lacus accumsan. Cras a lectus vitae tellus varius rutrum at in lectus. Praesent cursus nulla vel magna fermentum tempor.</p>
+                                </div>
+                            </div>
                         </div>                         
                     </div>
-                    <div class="col-md-6"> 
-</div>
+                    <div class="col-md-6">
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Nunc commodo justo a est cursus, at tincidunt lacus accumsan?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Quisque at magna ex. Maecenas ac ipsum a sapien molestie blandit eu a justo. Morbi rhoncus eget leo sed lacinia. Proin in arcu eget libero pellentesque sagittis nec sed nibh. Nunc commodo justo a est cursus, at tincidunt lacus accumsan. Cras a lectus vitae tellus varius rutrum at in lectus. Praesent cursus nulla vel magna fermentum tempor.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Ut ac imperdiet nisi?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Integer at porta mauris, blandit sollicitudin libero. Integer fermentum nibh bibendum,</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Morbi eu cursus diam. Morbi quis egestas est?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Nunc commodo justo a est cursus, at tincidunt lacus accumsan. Cras a lectus vitae tellus varius rutrum at in lectus. Praesent cursus nulla vel magna fermentum tempor.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div aria-expanded="false" class="pd-faqs-2-card-outer">
+                            <header class="pd-faqs-2-card-header">
+                                <a class="pd-faqs-2-btn" href="#" name="anchor">Tincidunt finibus lorem ut euismod?</a>
+                                <div>
+                                    <a href="#" class="pd-faqs-2-open-close-outer pd-faqs-2-btn"><div class="pd-faqs-2-open-close-horizontal"></div><div class="pd-faqs2-open-close-vertical"></div></a>
+                                </div>
+                            </header>
+                            <div class="pd-faqs-2-card-body">
+                                <div>
+                                    <p>Pellentesque malesuada aliquet est et tristique. Aliquam consequat velit a lacus condimentum, at suscipit odio lacinia. Ut vitae felis augue. Nulla tincidunt finibus lorem ut euismod. Mauris iaculis convallis ex, id ornare diam ultrices nec. Morbi eu cursus diam. Morbi quis egestas est.</p>
+                                </div>
+                            </div>
+                        </div>                         
+                    </div>
                 </div>
             </div>
         </section>
