Added new hero with search bar

--- a/_factory_heroesHalf.html
+++ b/_factory_heroesHalf.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <meta name="description" content=""/>
+        <meta name="author" content=""/>
         <title>Half heroes</title>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet"/>
     </head>
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
@@ -28,7 +28,7 @@
             </script>
                 <picture>
                     <source srcset="/images/uploads/hero-half-scissors-people-working.webp 1800w, 
-                                /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                                /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
                     <img srcset="/images/uploads/hero-half-scissors-people-working.jpg 1800w,
                             /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-half--scissors-people-working.jpg" onload="imageLoadedListener1()" class="pd-heroesHalf-1-image"/>
                 </picture>
@@ -103,6 +103,51 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-4</p>
+            </div>
+        </section>
+        <section class="pd-heroesHalf-4" style="position: relative;">
+            <div class="pd-heroesHalf-4-image-outer">
+                <script>
+                function imageLoadedListener4(e) {
+                    const heroHalfImage4 = document.querySelector(".pd-heroesHalf-4-image");
+                    heroHalfImage4.classList.add("pd-heroesHalf-4-image-loaded");
+                }
+            </script>
+                <picture>
+                    <source srcset="/images/uploads/hero-half-scissors-people-working.webp 1800w, 
+                                /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                    <img srcset="/images/uploads/hero-half-scissors-people-working.jpg 1800w,
+                            /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-half--scissors-people-working.jpg" onload="imageLoadedListener4()" class="pd-heroesHalf-4-image"/>
+                </picture>
+            </div>
+            <div class="pd-heroesHalf-4-overlay"></div>
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-lg-8 pb-4 pt-4">
+                        <div class="p-2 pd-heroesHalf-4-text-outer">
+                            <header>
+                                <h1>Resources</h1>
+                                <div class="pd-heroesHalf-4-headline">
+                                    <p><strong>Documents, guides and tutorials</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-heroesHalf-4-subHeadline">
+                                <p>Get started with our documents.</p>
+                            </div>
+                            <footer class="align-items-start d-flex flex-column flex-sm-row justify-content-start pt-3">
+                                <input class="form-control"/>
+                                <button type="button" class="btn btn-info d-flex ms-sm-2 mt-2 mt-sm-0">
+                                    <span><img src="images/design-assets/icon-magnifying-glass-2.svg" alt="icon of magnifying glass" width="20" height="20" class="me-1"/></span>Quick Search
+                                </button>
+                            </footer>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-5</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
