--- a/_factory_heroesHalf.html
+++ b/_factory_heroesHalf.html
@@ -150,6 +150,77 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-5</p>
             </div>
         </section>
+        <section class="pd-heroesHalf-5" style="position: relative;">
+            <div class="pd-heroesHalf-5-image-outer">
+                <script>
+                function imageLoadedListener5(e) {
+                    const heroHalfImage5 = document.querySelector(".pd-heroesHalf-5-image");
+                    heroHalfImage5.classList.add("pd-heroesHalf-5-image-loaded");
+                }
+            </script>
+                <picture>
+                    <source srcset="/images/uploads/hero-half-scissors-people-working.webp 1800w, 
+                                /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp"/>
+                    <img srcset="/images/uploads/hero-half-scissors-people-working.jpg 1800w,
+                            /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-half--scissors-people-working.jpg" onload="imageLoadedListener5()" class="pd-heroesHalf-5-image"/>
+                </picture>
+            </div>
+            <div class="pd-heroesHalf-5-overlay"></div>
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-12 pb-4 pt-4">
+                        <div class="p-2 pd-heroesHalf-5-text-outer">
+                            <header>
+                                <h1>Resources</h1>
+                                <div class="pd-heroesHalf-5-headline">
+                                    <p><strong>Documents, guides and tutorials</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-heroesHalf-5-subHeadline">
+                                <p>Get started with our documents, quick guides and helpful tutorials.</p>
+                            </div>
+                            <footer class="align-items-center d-flex flex-column flex-sm-row justify-content-sm-center justify-content-start pt-3">
+                                <input class="form-control"/>
+                                <button type="button" class="btn btn-info d-flex ms-sm-2 mt-2 mt-sm-0"><span><img src="images/design-assets/icon-magnifying-glass-2.svg" alt="icon of magnifying glass" width="20" height="20" class="me-1"/></span>Quick Search
+                                </button>
+                            </footer>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-6</p>
+            </div>
+        </section>
+        <section style="position: relative;" class="pd-heroesHalf-6">
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-md-6 pb-2 pt-2 text-center text-md-start">
+                        <div class="p-2 pd-heroesHalf-6-text-outer">
+                            <header>
+                                <h1>Resources</h1>
+                                <div class="pd-heroesHalf-6-headline">
+                                    <p><strong>Documents, guides and tutorials</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-heroesHalf-6-subHeadline">
+                                <p>Get started with our documentation, quick guides and tutorials.</p>
+                            </div>
+                        </div>                         
+                    </div>
+                    <div class="align-items-center col-md-6 d-flex flex-row justify-content-center">
+                        <img src="images/uploads/hero-scissors-office-info.svg" alt="image of someone working from home" width="250" height="220" class="m-3"/>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-7</p>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
