Fixed search disappearing search bar

--- a/_factory_heroesHalf.html
+++ b/_factory_heroesHalf.html
@@ -211,7 +211,18 @@
                         </div>                         
                     </div>
                     <div class="align-items-center col-md-6 d-flex flex-row justify-content-center">
-                        <img src="images/uploads/hero-scissors-office-info.svg" alt="image of someone working from home" width="250" height="220" class="m-3"/>                          
+                        <img src="images/uploads/hero-scissors-office-info.svg" alt="image of someone working from home" width="250" height="220" class="m-3"/> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pd-heroesHalf-6-search">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 pb-3 pt-3">
+                        <form><i><img src="images/design-assets/icon-magnifying-glass-gray-500.svg" alt="icon of magnifying glass" width="16" height="16"/></i>
+                            <input type="text" placeholder="Search"/>
+                        </form>                         
                     </div>
                 </div>
             </div>
