New save from PG

--- a/_factory_heroesHalf.html
+++ b/_factory_heroesHalf.html
@@ -136,8 +136,7 @@
                             </div>
                             <footer class="align-items-start d-flex flex-column flex-sm-row justify-content-start pt-3">
                                 <input class="form-control"/>
-                                <button type="button" class="btn btn-info d-flex ms-sm-2 mt-2 mt-sm-0">
-                                    <span><img src="images/design-assets/icon-magnifying-glass-2.svg" alt="icon of magnifying glass" width="20" height="20" class="me-1"/></span>Quick Search
+                                <button type="button" class="btn btn-info d-flex ms-sm-2 mt-2 mt-sm-0"><span><img src="images/design-assets/icon-magnifying-glass-2.svg" alt="icon of magnifying glass" width="20" height="20" class="me-1"/></span>Quick Search
                                 </button>
                             </footer>
                         </div>                         
@@ -181,7 +180,8 @@
                             </div>
                             <footer class="align-items-center d-flex flex-column flex-sm-row justify-content-sm-center justify-content-start pt-3">
                                 <input class="form-control"/>
-                                <button type="button" class="btn btn-info d-flex ms-sm-2 mt-2 mt-sm-0"><span><img src="images/design-assets/icon-magnifying-glass-2.svg" alt="icon of magnifying glass" width="20" height="20" class="me-1"/></span>Quick Search
+                                <button type="button" class="btn btn-info d-flex ms-sm-2 mt-2 mt-sm-0">
+                                    <span><img src="images/design-assets/icon-magnifying-glass-2.svg" alt="icon of magnifying glass" width="20" height="20" class="me-1"/></span>Quick Search
                                 </button>
                             </footer>
                         </div>                         
@@ -220,7 +220,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 pb-3 pt-3">
-                        <form><i><img src="images/design-assets/icon-magnifying-glass-gray-500.svg" alt="icon of magnifying glass" width="16" height="16"/></i>
+                        <form>
+                            <i><img src="images/design-assets/icon-magnifying-glass-gray-500.svg" alt="icon of magnifying glass" width="16" height="16"/></i>
                             <input type="text" placeholder="Search"/>
                         </form>                         
                     </div>
