Added in new list as per wireframe

--- a/_factory_lists.html
+++ b/_factory_lists.html
@@ -87,7 +87,7 @@
                                 </div>                                 
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-12 pb-2 pd-list-2-outer pt-2" id="search-by-distance">
                         <div class="row">
@@ -104,7 +104,7 @@
                                 </div>                                 
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                     <div class="col-12 pb-2 pd-list-2-outer pt-2" id="search">
                         <div class="row">
@@ -121,7 +121,7 @@
                                 </div>                                 
                                 <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> 
                             </div>
-                        </div>                                                  
+                        </div>                         
                     </div>
                 </div>
             </div>
@@ -129,6 +129,48 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-list-3</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-list-3 pt-5">
+            <div class="container">
+                <div class="row">
+                    <header class="col-12">
+                        <h2 class="pd-list-3-headline">Maecenas nec lorem et orci&nbsp;</h2>                          
+                    </header>
+                </div>
+                <div class="pt-3 row">
+                    <div class="col-12">
+                        <div class="pd-list-3-item">
+                            <a href="#" name="anchor">Suspendisse gravida ipsum velit, scelerisque ultricies odio iaculis in</a>
+                            <hr/>
+                        </div>
+                        <div class="pd-list-3-item">
+                            <a href="#" name="anchor">Vivamus imperdiet mattis libero a posuere in in blandit ex, ac lacinia eros</a>
+                            <hr/>
+                        </div>
+                        <div class="pd-list-3-item">
+                            <a href="#" name="anchor">Etiam consequat massa quam, eget dapibus lacus pulvinar a vivamus fermentum</a>
+                            <hr/>
+                        </div>
+                        <div class="pd-list-3-item">
+                            <a href="#" name="anchor">Aliquam euismod tempor nisi, id volutpat dolor. In eget enim leo</a>
+                            <hr/>
+                        </div>
+                        <div class="pd-list-3-item">
+                            <a href="#" name="anchor">Egestas pulvinar erat non hendrerit maecenas luctus mauris non nunc</a>
+                            <hr/>
+                        </div>
+                        <div class="pd-list-3-item">
+                            <a href="#" name="anchor">Donec ipsum quam ullamcorper vel gravida et vestibulum at est</a>
+                            <hr/>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-list-4</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
