Added in mobile fix for safari

--- a/_factory_breadcrumbs.html
+++ b/_factory_breadcrumbs.html
@@ -27,14 +27,11 @@
                     <div class="col-12">
                         <div class="pd-breadcrumbs-1">
                             <ul>
-                                <li>
-                                    <a href="#" name="anchor">Knowledgebase Home</a>
+                                <li><a href="#" name="anchor">Knowledgebase Home</a>
                                 </li>
-                                <li>
-                                    <a href="#" name="anchor">Getting Started</a>
+                                <li><a href="#" name="anchor">Getting Started</a>
                                 </li>
-                                <li>
-                                    <span>Setting up a user</span>
+                                <li><span>Setting up a user</span>
                                 </li>
                             </ul>
                         </div>                         
