--- a/_factory_breadcrumbs.html
+++ b/_factory_breadcrumbs.html
@@ -26,14 +26,24 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="pd-breadcrumbs-1">
-                            <ul>
-                                <li><a href="#" name="anchor">Knowledgebase Home</a>
-                                </li>
-                                <li><a href="#" name="anchor">Getting Started</a>
-                                </li>
-                                <li><span>Setting up a user</span>
-                                </li>
-                            </ul>
+                            <div class="pd-breadcrumbs-1-md">
+                                <ul>
+                                    <li>
+                                        <a href="#" name="anchor">Knowledgebase Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor">Getting Started</a>
+                                    </li>
+                                    <li>
+                                        <span>Setting up a user</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="pd-breadcrumbs-1-sm">
+                                <p>Up to:&nbsp;</p>
+                                <img src="images/design-assets/icon-breadcrumb-reversed.svg" alt="breadcrumb icon" width="6" height="10"/>
+                                <a href="#" name="anchor">Getting Started</a>
+                            </div>
                         </div>                         
                     </div>
                 </div>
