Added page menu widget

--- a/_factory_widgets.html
+++ b/_factory_widgets.html
@@ -36,8 +36,7 @@
                                     <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy" alt="image of woman at work" width="100" height="100"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer">
-                                <a href="#" class="pd-widget-1-link">Scully launched</a>
+                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Scully launched</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">04 March 2020</p>
@@ -52,8 +51,7 @@
                                     <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy" alt="image of manufacturer" width="100" height="100"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer">
-                                <a href="#" class="pd-widget-1-link">Wireframing with Adobe XD</a>
+                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Wireframing with Adobe XD</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">27 February 2020</p>
@@ -68,16 +66,14 @@
                                     <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy" alt="image of office workers" width="100" height="100"/>
                                 </picture>
                             </div>
-                            <div class="pd-widget-1-text-outer">
-                                <a href="#" class="pd-widget-1-link">Membership web app</a>
+                            <div class="pd-widget-1-text-outer"><a href="#" class="pd-widget-1-link">Membership web app</a>
                                 <div class="pd-widget-1-date-outer">
                                     <img src="images/design-assets/icon-calendar.svg" alt="icon of a calendar" width="16" height="16"/>
                                     <p class="pd-widget-1-date">12 February 2020</p>
                                 </div>
                             </div>
                         </article>
-                        <footer class="pb-3 pt-3 text-center">
-                            <a href="#" name="anchor" class="pd-widget-1-btn">View all news</a>
+                        <footer class="pb-3 pt-3 text-center"><a href="#" name="anchor" class="pd-widget-1-btn">View all news</a>
                         </footer>                         
                     </aside>
                 </div>
@@ -98,17 +94,23 @@
                     <aside class="col-lg-3 pb-3 pd-widget-2 pt-5">
                         <div class="pd-widget-2-outer">
                             <h3 class="pd-widget-2-label">Knowledgebase</h3>
-                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">All websites are not created equal</a>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">All websites are not created equal</a>
                             </div>
-                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">What are static site generators?</a>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">What are static site generators?</a>
                             </div>
-                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">Exploring progressive web apps</a>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">Exploring progressive web apps</a>
                             </div>
-                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">All about the CloudCannon CMS</a>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">All about the CloudCannon CMS</a>
                             </div>
-                            <div class="pd-widget-2-list-item"><a href="#" name="anchor">Improving accessibility</a>
+                            <div class="pd-widget-2-list-item">
+                                <a href="#" name="anchor">Improving accessibility</a>
                             </div>
-                            <footer class="pt-1 text-center"><a href="#" name="anchor" class="pd-widget-2-btn">View All</a>
+                            <footer class="pt-1 text-center">
+                                <a href="#" name="anchor" class="pd-widget-2-btn">View All</a>
                             </footer>
                         </div>                         
                     </aside>
@@ -139,8 +141,7 @@
                                         <img src="/images/uploads/sections-sample-healthcare.jpg" class="img-fluid" loading="lazy" alt="image of woman" width="100" height="100"/>
                                     </picture>
                                 </div>
-                                <div class="pd-widget-3-text-outer">
-                                    <a href="#" class="pd-widget-3-link">High search rankings in a competitive market</a>
+                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">High search rankings in a competitive market</a>
                                 </div>
                             </header>
                             <div class="pd-widget-3-text">
@@ -156,8 +157,7 @@
                                         <img src="/images/uploads/sections-sample-manufacturing.jpg" class="img-fluid" loading="lazy" alt="image of manufacturer" width="100" height="100"/>
                                     </picture>
                                 </div>
-                                <div class="pd-widget-3-text-outer">
-                                    <a href="#" class="pd-widget-3-link">Helping Scientific Services grow their business</a>
+                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">Helping Scientific Services grow their business</a>
                                 </div>
                             </header>
                             <div class="pd-widget-3-text">
@@ -173,15 +173,15 @@
                                         <img src="/images/uploads/sections-samples-business.jpg" class="img-fluid" loading="lazy" alt="image of office workers" width="100" height="100"/>
                                     </picture>
                                 </div>
-                                <div class="pd-widget-3-text-outer">
-                                    <a href="#" class="pd-widget-3-link">Showcasing Quality</a>
+                                <div class="pd-widget-3-text-outer"><a href="#" class="pd-widget-3-link">Showcasing Quality</a>
                                 </div>
                             </header>
                             <div class="pd-widget-3-text">
                                 <p>Scientific Services needed a new website to support its ambitious growth objectives.</p>
                             </div>
                         </article>
-                        <footer class="pb-3 pt-3 text-center"><a href="#" name="anchor" class="pd-widget-3-btn">View ALl Case STudies</a>
+                        <footer class="pb-3 pt-3 text-center">
+                            <a href="#" name="anchor" class="pd-widget-3-btn">View ALl Case STudies</a>
                         </footer>                         
                     </aside>
                 </div>
@@ -203,8 +203,7 @@
                         <div class="pd-widget-4-outer text-center text-lg-end">
                             <h3 class="pd-widget-4-headline">Web devs</h3>
                             <p class="pd-widget-4-subHeadline">Helping to build simple and complex web solutions</p>
-                            <footer>
-                                <a href="#" name="anchor" class="pd-widget-4-btn">Contact Us</a>
+                            <footer><a href="#" name="anchor" class="pd-widget-4-btn">Contact Us</a>
                             </footer>
                         </div>                         
                     </aside>
@@ -232,7 +231,8 @@
                             <div class="pd-widget-5-overlay"></div>
                             <div class="pd-widget-5-content-outer text-center text-lg-end">
                                 <h3 class="pd-widget-5-headline">Getting you there</h3>
-                                <p class="pd-widget-5-subHeadline">Helpful development services to get you to your web development destination... stress-free</p><a href="#" name="anchor" class="pd-widget-5-btn">Start your journey</a>
+                                <p class="pd-widget-5-subHeadline">Helpful development services to get you to your web development destination... stress-free</p>
+                                <a href="#" name="anchor" class="pd-widget-5-btn">Start your journey</a>
                             </div>
                         </div>                         
                     </aside>
@@ -242,6 +242,46 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-6</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="row">
+                    <aside class="col-md-4">
+                        <div class="pd-widget-6">
+                            <header class="pb-2 pd-widget-6-header pt-3">
+                                <p>Page Menu</p>
+                            </header>
+                            <nav>
+                                <div class="pd-widget-6-list-item"><a href="#" name="anchor">Suspendisse gravida ipsum&nbsp;</a>
+                                    <hr/>
+                                </div>
+                                <div class="pd-widget-6-list-item"><a href="#" name="anchor">Vivamus imperdiet mattis libero a posuere in in blandit&nbsp;</a>
+                                    <hr/>
+                                </div>
+                                <div class="pd-widget-6-list-item"><a href="#" name="anchor">Etiam consequat massa quam</a>
+                                    <hr/>
+                                </div>
+                                <div class="pd-widget-6-list-item"><a href="#" name="anchor">Aliquam euismod tempor nisi</a>
+                                    <hr/>
+                                </div>
+                                <div class="pd-widget-6-list-item"><a href="#" name="anchor">Egestas pulvinar erat non hendrerit maecenas luctus mauris non nunc</a>
+                                    <hr/>
+                                </div>
+                                <div class="pd-widget-6-list-item"><a href="#" name="anchor">Donec ipsum quam ullamcorper vel gravida</a>
+                                    <hr/>
+                                </div>
+                            </nav>
+                        </div>                                                  
+                    </aside>
+                    <div class="col-md-8">                          
+</div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-widget-7</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
